<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="323dp"
        android:layout_height="192dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/airlineName"
                android:layout_width="230dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:labelFor="@id/airlineNameValue"
                android:text="@string/airline"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/airlineNameValue"
                android:layout_width="280dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:autofillHints="Air Express"
                android:hint="@string/airline_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source"
                android:layout_width="230dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:labelFor="@id/sourceValue"
                android:text="@string/source"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/sourceValue"
                android:layout_width="280dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:autofillHints="PDX"
                android:hint="@string/flight_source"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination"
                android:layout_width="230dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:labelFor="@id/destinationVal"
                android:text="@string/destination"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/destinationVal"
                android:layout_width="280dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:autofillHints="LAX"
                android:hint="@string/flight_destination"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/searchFlightButton"
        android:layout_width="189dp"
        android:layout_height="54dp"
        android:onClick="searchFlight"
        android:text="@string/search_flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.176" />
</androidx.constraintlayout.widget.ConstraintLayout>