<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/airlineName"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/airline"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/airlineNameValue"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flightNumber"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/flight_number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/flightNumberValue"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/source"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/sourceValue"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/depart"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/departure"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/departureValue"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:inputType="datetime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/destination"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/destinationVal"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/arrival"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/arrival"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/arrivalValue"
                android:layout_width="236dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:inputType="datetime" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addFlightButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:onClick="addFlight"
        android:text="@string/add_flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.31" />

</androidx.constraintlayout.widget.ConstraintLayout>